Fixed flaw in grammar.

--- a/ottar-spec.tex
+++ b/ottar-spec.tex
@@ -8,9 +8,9 @@
 
 \begin{bnf}
 \bnfprod{Ottar}{%
-  \bnfpn{send}
+  (\bnfpn{send}
   \bnfsp
-  \bnfpn{msgs}
+  \bnfpn{msgs})+
 }\\
 \bnfprod{send}{%
   \bnfpn{ident}
